# KeyLogger

./: .gitignore  CMakeLists.txt  log.py  main.cpp  main.py  token.pickle
EmailsToSend/: 1.txt  2.txt
Sender/: credentials.json  log.py  log.txt  main.py  token.pickle
keyboard/: keyboard.cpp  keyboard.h
logger/: CMakeLists.txt  main.cpp
logger/keyboard/: keyboard.h
logger/process/: process.h
logger/url/: url.cpp  url.h
process/: process.cpp
url/: url-DEPRECATED.cpp  url.cpp  url.h
